# treeedb

./: Cargo.toml
treeedb-tsql/: Cargo.toml
treeedb-tsql/src/: main.rs
treeedb/src/: cli.rs  consumer.rs  lib.rs  narrow.rs  wide.rs
treeedbgen-souffle-tsql/: Cargo.toml
treeedbgen-souffle-tsql/src/: main.rs
treeedbgen-souffle-tsql/tests/: main.rs
treeedbgen-souffle-tsql/tests/tsql/: test.sql
treeedbgen-souffle/src/: gen.rs
